syntax = "proto3";
package test;

message Request {
    string query = 1;
}

message Response {
    string result = 1;
}

service ServiceInfo {
    rpc Search(Request) returns (Response);
}
